--- a/main.html
+++ b/main.html
@@ -8,8 +8,57 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
+	<TABLE borde>
+   <thead id="name">
+	   <th>
+		   <tr>
+			   <td>NAME</td>
+			    <td>KILLS</td>
+			    <td>SAVED</td>
+			    <td>DEATHS</td>
+			    <td>REVIVES</td>
+			    <td>WIN</td>
+		   </tr>
+	   </th>
+   </thead>
+		<tbody>
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr class="colorchange">
+				<td>Cool Doggo</td>
+				<td>13</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+				<td>1</td>
+			</tr>
 
+			<tr>
+				<td>Andrews</td>
+				<td>19</td>
+				<td>2</td>
+				<td>10</td>
+				<td>11</td>
+				<td>0</td>
+			</tr>
+
+			<tr class="colorchange">
+				<td>Strawberry</td>
+				<td>2</td>
+				<td>9</td>
+				<td>3</td>
+				<td>5</td>
+				<td>1</td>
+			</tr>
+			
+		</tbody>
+</TABLE>
         
 </body>
 </html>
